--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="root"/>
-  <script src="dist/bundle.js" charset="utf-8"></script>
+  <script src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
